First complete draft

--- a/CV.html
+++ b/CV.html
@@ -19,7 +19,7 @@
 					<a href="index.html" class="logo">Antimo Marrazzo</a>
 					<nav id="nav">
                         <a href="index.html">Home</a>
-                        <a href="research.html">CV</a>
+                        <a href="CV.html">CV</a>
 						<a href="research.html">Research</a>
                         <a href="teaching.html">Teaching</a>
 						<a href="publications.html">Publications</a>
@@ -50,7 +50,7 @@
                                     <td style="vertical-align:top">04/2021 – now  </td>
                                     <td><b>Junior assistant professor ("Ricercatore a Tempo Determinato tipo A", RTDa)</b> <br>
                                         <b>Department of Physics, University of Trieste, Italy </b><br>
-                                        Condensed-Matter Theory (02/B2 FIS/03)
+                                        Condensed-Matter Theory (SSD 02/B2 FIS/03)
                                         <br>
                                     </td>
                                 </tr>
