--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 			<section id="two" class="wrapper style1 special">
 				<div class="inner">
 					<header>
+						<h2>Contacts</h2>
+					    <!-- <p>Find out about our work</p> -->
+						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
+						   Telephone: +39 040-XXX<br>
+						   Email: marrazzo (AT) units (DOT) it<br>
+						</p>
+					</header>
+					<header>
 						<h2>Research</h2>
 					    <!-- <p>Find out about our work</p> -->
 					</header>
@@ -53,7 +61,7 @@
 							</header>
 							<p>Advances in electronic-structure theory and development of innovative algorithms</p>
 							<footer>
-								<a href="sustainability.html" class="button special">Read More</a>
+								<a href="es.html" class="button special">Read More</a>
 							</footer>
 						</article>
                         <article>
@@ -77,7 +85,7 @@
 							</header>
 							<p>Data mining and machine learning techniques applied to electronic structure simulations</p>
 							<footer>
-								<a href="pressure.html" class="button special">Read More</a>
+								<a href="ml.html" class="button special">Read More</a>
 							</footer>
 						</article>
 
