--- a/publications.html
+++ b/publications.html
@@ -80,9 +80,9 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 9. </td>
-                                    <td><b>A. Marrazzo</b>, M. Gibertini, D. Campi, N. Mounet and N. Marzari<br>
-                                     <i>Abundance of Z2 topological order in exfoliable two-dimensional insulators</i><br>
-                                     <a href=https://doi.org/10.1021/acs.nanolett.9b02689>Nano Letters 19, 12 (2019)</a>
+                                    <td>G. Pizzi, V. Vitale, R. Arita, S. Blügel, F. Freimuth, G. Géranton, M. Gibertini, D. Gresch, C. Johnson, T. Koretsune, J. Ibanez-Azpiroz, H. Lee, J.-M. Lihm, D. Marchand, <b>A. Marrazzo</b>, Y. Mokrousov, J. I. Mustafa, Y. Nohara, Y. Nomura, L. Paulatto, S. Poncé, T. Ponweiser, J. Qiao, Florian Thöle, S. S. Tsirkin, M. Wierzbowska, N. Marzari, D. Vanderbilt, I. Souza, A. A. Mostofi, and J. R. Yates<br>
+                                     <i>Wannier90 as a community code: new features and applications</i><br>
+                                     <a href=https://doi.org/10.1088/1361-648X/ab51ff>J. Phys. Cond. Matt. 32, 165902 (2020)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -90,9 +90,9 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 8. </td>
-                                    <td>G. Pizzi, V. Vitale, R. Arita, S. Blügel, F. Freimuth, G. Géranton, M. Gibertini, D. Gresch, C. Johnson, T. Koretsune, J. Ibanez-Azpiroz, H. Lee, J.-M. Lihm, D. Marchand, <b>A. Marrazzo</b>, Y. Mokrousov, J. I. Mustafa, Y. Nohara, Y. Nomura, L. Paulatto, S. Poncé, T. Ponweiser, J. Qiao, Florian Thöle, S. S. Tsirkin, M. Wierzbowska, N. Marzari, D. Vanderbilt, I. Souza, A. A. Mostofi, and J. R. Yates<br>
-                                     <i>Wannier90 as a community code: new features and applications</i><br>
-                                     <a href=https://doi.org/10.1088/1361-648X/ab51ff>J. Phys. Cond. Matt. 32, 165902 (2020)</a>
+                                    <td><b>A. Marrazzo</b>, M. Gibertini, D. Campi, N. Mounet and N. Marzari<br>
+                                     <i>Abundance of Z2 topological order in exfoliable two-dimensional insulators</i><br>
+                                     <a href=https://doi.org/10.1021/acs.nanolett.9b02689>Nano Letters 19, 12 (2019)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -153,7 +153,7 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> <img src="images/pub-thumbnails/RapidIcon60x60.jpg" width="35px"/> </td>
                                     <td> 2. </td>
-                                    <td> <b>A. Marrazzo</b>, R. Resta<br>
+                                    <td> <b>A. Marrazzo</b> and R. Resta<br>
                                      <i>Locality of the anomalous Hall conductivity</i><br>
                                      <a href=https://doi.org/10.1103/PhysRevB.95.121114>Phys. Rev. B 95, 121114(R) (2017)</a>
                                     </td>
@@ -164,7 +164,7 @@
                                 <tr> <!-- new paper -->
                                     <td> </td> <!-- icon goes here -->
                                     <td> 1. </td>
-                                    <td> <b>A. Marrazzo</b>, R. Resta<br>
+                                    <td> <b>A. Marrazzo</b> and R. Resta<br>
                                      <i>Irrelevance of the boundary on the magnetization of metals</i><br>
                                      <a href=https://doi.org/10.1103/PhysRevLett.116.137201>Phys. Rev. Lett. 116, 137201 (2016)</a>
                                     </td>
