Added telephone number

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Contacts</h2>
 					    <!-- <p>Find out about our work</p> -->
 						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
-						   Telephone: +39 040-XXX<br>
+						   Telephone: +39 0402240288<br>
 						   Email: marrazzo (AT) units (DOT) it<br>
 						</p>
 					</header>
