Added email address

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					    <!-- <p>Find out about our work</p> -->
 						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
 						   Telephone: +39 0402240288<br>
-						   Email: marrazzo (AT) units (DOT) it<br>
+						   Email: antimo (DOT) marrazzo (AT) units (DOT) it<br>
 						</p>
 					</header>
 					<header>
