removed embeeding, added static image with links

--- a/topology.html
+++ b/topology.html
@@ -44,11 +44,13 @@
 								In collaboration with experimental groups, we have have been studying also 3D jacutingaite that we discovered to be a dual topological insulator, where a weak Z2 topological order coexist with a non-trivial crystalline topology described by a mirror Chern number. ARPES experiments and DFT simulations reported the presence of 001-surface states [<a href=https://doi.org/10.1103/PhysRevLett.124.106402>Phys. Rev. Lett. 124, 106402 (2020)</a>] protected by a mirror Chern number of 2. We unraveled the emergent topology of 3D jacutingaite by extending the 2D Kane-Mele model with an peculiar second nearest-layer hopping term derived from maximally-localised Wannier functions [<a href=https://doi.org/10.1103/PhysRevResearch.2.012063>Phys. Rev. Research 2, 012063(R) Editors’ Suggestion (2020)</a>].
 								</p>
 								<br>
-								<p>Here below you can interactively access some of the results of the computational screening for novel QSHIs.</p>
-								<div> 
+								<p> <a href="http://materialscloud.org/discover/2dtopo/">Here</a> you can interactively access some of the results of the computational screening for novel QSHIs.</p>
+								<a href="http://materialscloud.org/discover/2dtopo/"><img src="images/2dtopo_webpage.png" width="100%" alt="2D topological insulators webpage screenshot"></a>
+								<!--<div> 
 									<object type="text/html" data="https://www.materialscloud.org/discover/2dtopo/" width="100%" height="600px" style="overflow:auto;border:5px ridge white">
 									</object>
 								 </div>
+								-->
 								<br><br>
 
 
