--- a/es.html
+++ b/es.html
@@ -47,7 +47,7 @@
 								<h2 id="content">Standard Solid-State Pseudopotentials (SSSP)</h2>
 								<p>Despite the enormous success and popularity of density-functional theory, systematic verification and validation studies are still limited in number and scope. A few years ago [<a href=https://doi.org/10.1038/s41524-018-0127-2>npj Computational Materials 4, 72 (2018)</a>] we introduced a protocol to test publicly available pseudopotential libraries. The protocol was built on criteria such as the verification against all-electron equations of state and plane-wave convergence tests for phonon frequencies, band structure, cohesive energy and pressure. Through this protocol we obtained curated pseudopotential libraries (named SSSP or standard solid-state pseudopotential libraries), that we targeted for high-throughput materials screening (“SSSP efficiency”) and high-precision materials modelling (“SSSP precision”). The SSSP precision currently scores highest among open-source pseudopotential libraries available in the Δ-factor test of equations of states of elemental solids. <a href="http://materialscloud.org/sssp">Here</a> you can access the SSSP webpage where you can find all the recommended pseudopotentials and cutoffs, together with an interactive interface to the database of test calculations.</p>
 
-								<a href="http://materialscloud.org/sssp"><img src="images/sssp.png" width="100%" alt="SSSP webpage screenshot"></a>
+								<a href="http://materialscloud.org/sssp"><img src="images/SSSP.png" width="100%" alt="SSSP webpage screenshot"></a>
 								 <!-- <div> 
 									<object type="text/html" data="http://materialscloud.org/sssp" width="100%" height="600px" style="overflow:auto;border:5px ridge white">
 									</object>
