--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 					<a href="index.html" class="logo">Antimo Marrazzo</a>
 					<nav id="nav">
                         <a href="index.html">Home</a>
-                        <a href="CV.html">CV</a>
+                        <a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
                         <a href="teaching.html">Teaching</a>
 						<a href="publications.html">Publications</a>
@@ -49,8 +49,18 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 13. </td>
+                                    <td> R. Zhang*, <b>A. Marrazzo*</b>, M. Verstraete, N. Marzari and T. Sohier <br>
+                                     <i>Gate control of spin-layer-locking FETs and application to monolayer LuIO</i><br>
+                                     <a href=https://arxiv.org/abs/2106.07913> arXiv:2106.07913 [cond-mat.mtrl-sci] (2021)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 12. </td>
-                                    <td>V. Vitale, G. Pizzi, A. Marrazzo, J, Yates, N. Marzari and A. Mostofi<br>
+                                    <td>V. Vitale, G. Pizzi, <b>A. Marrazzo</b>, J, Yates, N. Marzari and A. Mostofi<br>
                                      <i>Automated high-throughput Wannierisation</i><br>
                                      <a href=https://doi.org/10.1038/s41524-020-0312-y>npj Computational Materials, 6, 66 (2020)</a>
                                     </td>
@@ -139,7 +149,7 @@
                                     </td>
                                 </tr>
                                 <tr> <!-- new paper -->
-                                    <td style="vertical-align:middle"> </td>
+                                    <td style="vertical-align:middle"> <img src="images/pub-thumbnails/cover_nanotech_lowres.png" width="35px"/></td>
                                     <td> 3. </td>
                                     <td>  N. Mounet, M. Gibertini, P. Schwaller, D. Campi, A. Merkys, <b>A. Marrazzo</b>, T. Sohier, I. E. Castelli, A. Cepellotti, G. Pizzi and N. Marzari<br>
                                      <i>Two-dimensional materials from high-throughput computational exfoliation of experimentally known compounds</i><br>
