--- a/ml.html
+++ b/ml.html
@@ -19,7 +19,7 @@
 					<a href="index.html" class="logo">Antimo Marrazzo</a>
 					<nav id="nav">
                         <a href="index.html">Home</a>
-                        <a href="CV.html">CV</a>
+                        <a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
                         <a href="teaching.html">Teaching</a>
 						<a href="publications.html">Publications</a>
