--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
                                     <td> 13. </td>
                                     <td> R. Zhang*, <b>A. Marrazzo*</b>, M. Verstraete, N. Marzari and T. Sohier <br>
                                      <i>Gate control of spin-layer-locking FETs and application to monolayer LuIO</i><br>
-                                     <a href=https://arxiv.org/abs/2106.07913> arXiv:2106.07913 [cond-mat.mtrl-sci] (2021)</a>
+                                     <a href=https://doi.org/10.1021/acs.nanolett.1c02322> Nano Letters (2021)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
