--- a/topology.html
+++ b/topology.html
@@ -36,13 +36,33 @@
 						<h2>Topological & Quantum Materials</h2>
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
-			
+								<!-- Intro -->
+								<h2 id="content">Spintronics materials</h2>
+								<div class="flex flex-2">
+									<article>
+								<p>
+									While conventional electronics encodes information into the electronic charge, spintronics relies on finding innovative ways to manipulate the electronic spin. This approach brings new functionalities, ultimately delivering multi-functional, high-speed, low-energy electronic	technologies. Crucial to progress in the field is the discovery of novel high-performance materials and their integration in devices enabling good control over their properties. Notably, the top-performing spintronic materials are intertwined with Einstein’s theory of special relativity. In fact, spintronics materials are characterised by a strong effect called “spin-orbit coupling”: in these materials the core electrons of the heavy chemical elements that are present, travel at enormous speed-comparable to the speed of light-such that relativistic corrections need to be introduced to amend the standard non-relativistic quantum mechanics that would be typically used to compute materials properties.
+									</p></article>
+									<article><img src="images/spinfet.png" width="100%" alt="Novel 2D material for spintronics."></article>
+									<p>
+									Quite recently it has been proposed that a very special family of 2D materials, named “R2" and characterized by peculiar local crystalline symmetries, might provide an outstanding platform to realize spintronic devices, in particular spin field-effect transistors (spinFETs). These R2 materials
+									are composed of two sublayers in which the spin of the travelling electrons precesses (i.e. rotates around an axis) in opposite directions due to a strong intrinsic spin-orbit coupling mechanism called the Rashba effect. The spinFET can then be built by sandwiching these R2 2D materials
+									between electric gates to control the spin population of each sublayer, and thus the rotation of the spins travelling through the material. Recently [<a href=https://doi.org/10.1021/acs.nanolett.1c02322>Nano Letters (2021)</a>], we identified [<a href=https://www.materialscloud.org/discover/2dstructures/details/OLuI>LuIO</a>] as the best R2 2D material by screening hundreds of materials with high-throughput materials simulations powered by supercomputers. In addition, we studied in full detail how to control its properties with electric gates within the density-functional theory framework, simulating for the first time ever the effect of electronic doping and providing practical guidelines to build and operate 2D spinFET devices.
+									</p>
+								</div>
 								<!-- Intro -->
 								<h2 id="content">Topological insulators</h2>
+								<div class="flex flex-2">
+
+							   <article><img src="images/3d_jacu.png" width="100%" alt="Jacutingaite"></article>
+
+							   <article>
 								<p>
 								I have been using first-principles atomistic simulations to discover and study novel 2D materials with topological order. Leveraging materials informatics, I completed a computational screening for novel quantum spin Hall insulators (QSHI) [<a href=https://doi.org/10.1021/acs.nanolett.9b02689>Nano Letters 19, 12 (2019)</a>]. In the process, I discovered that the naturally-occuring mineral <i>jacutingaite</i> can potentially be exfoliated into monolayers that are Kane-Mele (graphene-like) 2D topological insulators [<a href=https://doi.org/10.1103/PhysRevLett.120.117701>Phys. Rev. Lett. 120, 117701 (2018)</a>]. Monolayer jacutingaite is a novel QSHI with a large band gap and posses a unique mechanism for electrical switching, thanks to a strong interplay between spin-orbit coupling, inversion crystal-symmetry breaking and dielectric response. See also the news story <a href="http://theossrv1.epfl.ch/Main/2D?action=download&upname=jacu_article.pdf">here</a>.
 								In collaboration with experimental groups, we have have been studying also 3D jacutingaite that we discovered to be a dual topological insulator, where a weak Z2 topological order coexist with a non-trivial crystalline topology described by a mirror Chern number. ARPES experiments and DFT simulations reported the presence of 001-surface states [<a href=https://doi.org/10.1103/PhysRevLett.124.106402>Phys. Rev. Lett. 124, 106402 (2020)</a>] protected by a mirror Chern number of 2. We unraveled the emergent topology of 3D jacutingaite by extending the 2D Kane-Mele model with an peculiar second nearest-layer hopping term derived from maximally-localised Wannier functions [<a href=https://doi.org/10.1103/PhysRevResearch.2.012063>Phys. Rev. Research 2, 012063(R) Editors’ Suggestion (2020)</a>].
-								</p>
+								</p></article>
+
+
 								<br>
 								<p> <a href="http://materialscloud.org/discover/2dtopo/">Here</a> you can interactively access some of the results of the computational screening for novel QSHIs.</p>
 								<a href="http://materialscloud.org/discover/2dtopo/"><img src="images/2dtopo_webpage.png" width="100%" alt="2D topological insulators webpage screenshot"></a>
