--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             				<div class="image center">
             				<!--<div class="image cover">-->
-            					<img src="images/spinfet_transp.png" width="420" alt="Top 10"/>
+            					<img src="images/spinfet_transp.png" width="420" alt="LuIO spinFET"/>
             				</div>
             				<header>
             					<h3>Discovered novel 2D material for spintronics and studied the
