--- a/ml.html
+++ b/ml.html
@@ -21,7 +21,7 @@
                         <a href="index.html">Home</a>
                         <a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
-                        <a href="teaching.html">Teaching</a>
+                        <a href="team.html">Team</a>
 						<a href="publications.html">Publications</a>
 						<!--<a href="news.html">News</a>-->
 					</nav>
@@ -39,9 +39,21 @@
 			
 								<!-- Intro -->
 								<h2 id="content">Predicting electronic structure properties</h2>
-								<p>!Work in progress!</p>
+
+								<div class="flex flex-2">
+								<article>
+								<p>We are developing electronic structure fingerprints to chart the materials space and speed up first-principles simulations of complex properties. We couple machine learning methods with physics-based models, targeting accurate predictions of electronic structure properties at low cost.
+								The combination of disclosing unknown patterns in the materials space with data mining and speeding up the prediction of materials properties through machine learning, allows to accelerate the design and discovery of novel materials.
+								</p>
+								</article>
+								<article>
+										<img src="images/chart.png" width="420" alt="chart"/>
+							    </article>
+								</div>
 								<br><br>	
 								<br><br>
+								<h2 id="content">Neural-network interatomic potential for materials</h2>
+								<p>We are building classical interatomic potential based on neural-network architectures to study anharmonic effects and finite-temperature properties of materials. The training is powered by ab-initio molecular dynamics, exploiting modern GPU-accelerated supercomputers to tackle large systems.</p>
 
 
 
