--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+		#top a:link {
+			color:white;
+		}	
+		#top a:visited {
+			color:white;
+		}	
+		#top a:hover {
+			color:white;
+		}	
+		#top a:active {
+			color:white;
+		}	
+	    </style>	
 	</head>
 	<body>
 
@@ -23,7 +37,7 @@
 						<a href="index.html">Home</a>
 						<a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
-						<a href="teaching.html">Teaching</a>
+						<a href="team.html">Team</a>
 						<a href="publications.html">Publications</a>
 					</nav>
 					<a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
@@ -37,31 +51,34 @@
 			</section>
 
 
-			<section id="two" class="wrapper style1 special">
-				<div class="inner">
-					<header>
-						<h2>Contacts</h2>
-					    <!-- <p>Find out about our work</p> -->
-						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
-						   Telephone: +39 0402240288<br>
-						   Email: antimo (DOT) marrazzo (AT) units (DOT) it<br>
-						</p>
-					</header>
-					<header>
-
             <!-- One -->
-            <section id="one" class="wrapper special">
+            <section id="one" class="wrapper style1 special">
             	<div class="inner">
             		<header>
             			<h2>News</h2>
             			<p>Latest highlights</p>    <!-- from the group -->
             		</header>
-            		<div class="flex">
+            		<div class="flex flex-2">
+
+						<article>
+            				<p>November 2021</p>
+
+            				<header>
+            					<h3>Wasserman Prize 2021</h3>
+            				</header>
+							<div id='top'> 
+            					My doctoral thesis work has been recognised with the <a href="https://actu.epfl.ch/news/professor-rene-wasserman-award-2021-antimo-marrazz/">Wasserman Award 2021</a> for <em>innovative and high-level research in the field of new materials</em>, and in particular for <em>for charting the topological properties of all exfoliable non-magnetic materials, identifying 2D jacutingaite as the first example of a Kane-Mele quantum spin Hall insulator, and 3D jacutingaite as a dual-topology material - a prediction later confirmed by experiments</em>. 
+								This is the third recognition for my PhD work at EPFL, following the SAIS prize 2021 for the best STEM PhD 2021 among Italian-speaking doctoral students in Switzerland and the <a href="https://www.epfl.ch/education/phd/edmx-materials-science-and-engineering/edmx-awards-laureates/" >2020 EPFL Doctoral Program Thesis Distinction</a> awarded to the 8% best PhD students of each EPFL doctoral school every year. 
+							</div> 
+								<footer>
+									<a href="https://actu.epfl.ch/news/professor-rene-wasserman-award-2021-antimo-marrazz/" class="button special">Read More</a>
+								</footer>
+            			</article>
 						
             			<article>
             				<p>August 2021</p>
 
-            				<div class="image center">
+            				<div class="image cover">
             				<!--<div class="image cover">-->
             					<img src="images/spinfet_transp.png" width="420" alt="LuIO spinFET"/>
             				</div>
@@ -78,10 +95,12 @@
             		</div>
             	</div>
             </section>
-
-						<h2>Research</h2>
-					    <!-- <p>Find out about our work</p> -->
-					</header>
+            <!-- Two -->
+			<section id="two" class="wrapper  special">
+				<div class="inner">
+            		<header>
+            			<h2>Research</h2>
+            		</header>
 					<div class="flex flex-3">
                         <article>
 							<div class="image cover">
@@ -123,7 +142,18 @@
 					</div>
 				</div>
 			</section>
-
+			<section id="contacts" class="wrapper style1 special">
+				<div class="inner">
+					<header>
+						<h2>Contacts</h2>
+					    <!-- <p>Find out about our work</p> -->
+						<p>Address: strada Costiera 11, 34151 Trieste, Italy <br>
+						   Telephone: +39 0402240288<br>
+						   Email: antimo (DOT) marrazzo (AT) units (DOT) it<br>
+						</p>
+					</header>
+					<header>
+			</section>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
