--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
                         <a href="index.html">Home</a>
                         <a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
-                        <a href="teaching.html">Teaching</a>
+                        <a href="team.html">Team</a>
 						<a href="publications.html">Publications</a>
 						<!--<a href="news.html">News</a>-->
 					</nav>
@@ -52,7 +52,7 @@
                                     <td> 13. </td>
                                     <td> R. Zhang*, <b>A. Marrazzo*</b>, M. Verstraete, N. Marzari and T. Sohier <br>
                                      <i>Gate control of spin-layer-locking FETs and application to monolayer LuIO</i><br>
-                                     <a href=https://doi.org/10.1021/acs.nanolett.1c02322> Nano Letters (2021)</a>
+                                     <a href=https://doi.org/10.1021/acs.nanolett.1c02322> Nano Letters 21, 18 (2021)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
