--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
                         <a href="index.html">Home</a>
                         <a href="bio.html">Bio</a>
 						<a href="research.html">Research</a>
-                        <a href="teaching.html">Teaching</a>
+                        <a href="team.html">Team</a>
 						<a href="publications.html">Publications</a>
 						<!--<a href="news.html">News</a>-->
 					</nav>
