--- a/ml.html
+++ b/ml.html
@@ -47,7 +47,7 @@
 								</p>
 								</article>
 								<article>
-										<img src="images/chart.png" width="420" alt="chart"/>
+										<img src="images/chart.jpg" width="420" alt="chart"/>
 							    </article>
 								</div>
 								<br><br>	
