--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,16 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 14. </td>
+                                    <td><b>A. Marrazzo</b> and M. Gibertini <br>
+                                     <i>Twist-resilient and robust ferroelectric quantum spin Hall insulators driven by van der Waals interactions</i><br>
+                                     <a href=https://arxiv.org/abs/2112.07695> arXiv:2112.07695 (2021)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 13. </td>
                                     <td> R. Zhang*, <b>A. Marrazzo*</b>, M. Verstraete, N. Marzari and T. Sohier <br>
                                      <i>Gate control of spin-layer-locking FETs and application to monolayer LuIO</i><br>
