Added arxiv entry

--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,16 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 15. </td>
+                                    <td>I. Gilardoni, F. Becca, <b>A. Marrazzo</b> and A. Parola<br>
+                                     <i>A real-space many-body marker for correlated Z2 topological insulators</i><br>
+                                     <a href=https://doi.org/10.48550/arXiv.2202.12207> arXiv:2202.12207 (2022)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 14. </td>
                                     <td><b>A. Marrazzo</b> and M. Gibertini <br>
                                      <i>Twist-resilient and robust ferroelectric quantum spin Hall insulators driven by van der Waals interactions</i><br>
@@ -80,7 +90,7 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle">  <img src="images/pub-thumbnails/EditorsSuggestion.jpg" width="35px"/><img src="images/pub-thumbnails/RapidIcon60x60.jpg" width="35px"/></td>
                                     <td> 11. </td>
-                                    <td><b>A. Marrazzo</b>, N. Marzari and Marco Gibertini<br>
+                                    <td><b>A. Marrazzo</b>, N. Marzari and M. Gibertini<br>
                                      <i>Emergent dual topology in the three-dimensional Kane-Mele Pt2HgSe3</i><br>
                                      <a href=https://doi.org/10.1103/PhysRevResearch.2.012063>Phys. Rev. Research 2, 012063(R) Editors’ Suggestion (2020)</a>
                                     </td>
