--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
                                     <td> 15. </td>
                                     <td>I. Gilardoni, F. Becca, <b>A. Marrazzo</b> and A. Parola<br>
                                      <i>A real-space many-body marker for correlated Z2 topological insulators</i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2202.12207> arXiv:2202.12207 (2022)</a>
+                                     <a href=https://doi.org/10.48550/arXiv.2202.12207> arXiv (2022)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -62,7 +62,7 @@
                                     <td> 14. </td>
                                     <td><b>A. Marrazzo</b> and M. Gibertini <br>
                                      <i>Twist-resilient and robust ferroelectric quantum spin Hall insulators driven by van der Waals interactions</i><br>
-                                     <a href=https://arxiv.org/abs/2112.07695> arXiv:2112.07695 (2021)</a>
+                                     <a href=https://doi.org/10.1038/s41699-022-00305-9> npj 2D Materials and Applications 6, 30 (2022)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -82,7 +82,7 @@
                                     <td> 12. </td>
                                     <td>V. Vitale, G. Pizzi, <b>A. Marrazzo</b>, J, Yates, N. Marzari and A. Mostofi<br>
                                      <i>Automated high-throughput Wannierisation</i><br>
-                                     <a href=https://doi.org/10.1038/s41524-020-0312-y>npj Computational Materials, 6, 66 (2020)</a>
+                                     <a href=https://doi.org/10.1038/s41524-020-0312-y>npj Computational Materials 6, 66 (2020)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
