--- a/team.html
+++ b/team.html
@@ -36,18 +36,31 @@
                     <header class="align-center">
                         <h2>Team</h2>
                         <!--<p>Aliquam erat volutpat nam dui </p>-->
-                    </header>                    
-                        <!-- Bartomeu Monserrat -->
+                    
+                    </header>       
+                    <div class="flex flex-2">             
                         <div class="box person">
                             <div class="image">
                                 <img  src="images/photo_am_website.jpg" style='max-width: 200px; max-height:200px'/>
                             </div>
-                            <h3>Dr Antimo Marrazzo</h3>
+                            <h3>Antimo Marrazzo</h3>
                             <p>Junior Assistant Professor (RTDa) in Theoretical Condensed Matter Physics<br>
                                 Physics Department, University of Trieste <br>
-                   </div>
+                         </div>
+                        <div class="box person">
+                        <div class="image">
+                        <img  src="images/valerio.jpeg" style='max-width: 200px; max-height:200px'/>
+                        </div>
+                    <h3>Valerio Vitale</h3>
+                    <p>Marie Sklodowska-Curie Postdoctoral Fellow<br>
+                        (starting September 2022) Physics Department, University of Trieste <br>
+                        </div>
+                    </div>
+                    
+                    <h3><b>PhD, MSc & BSc students </b></h3>
+
+                    <div class="flex flex-3">
                 <!--<header class="align-left"> -->
-                        <h3><b>PhD students</b></h3>
                         <!--<p>Aliquam erat volutpat nam dui </p>-->
                 <!--   </header>-->
                 <!--<div class="flex flex-3"> -->
@@ -57,26 +70,22 @@
                                     </div>
                             <h3>Austin Zadoks</h3>
                             <p>PhD student in Materials Science and Engineering at EPFL<br> 
-                            (cosupervised with Prof. Nicola Marzari)<br>
+                            (cosupervised with Nicola Marzari)<br>
                             <i>Machine learning of electronic structure properties</i><br>
                         </div>
                 <!-- </div> -->
 
-                        <h3><b>MSc & BSc students</b></h3>
-                        <!--<p>Aliquam erat volutpat nam dui </p>-->
-                <div class="flex flex-3">
-                        <!-- Yun Liu -->
-                        <div class="box person">
-                            <div class="image">
-                                <img src="images/matteo.png" style='max-width: 200px; max-height:200px'/>
-                            </div>
-                            <h3>Matteo D'Alessio</h3>
-                            <p>Master student in Physics<br> 
-                            University of Trieste<br>
-                            <i>First-principles modelling of novel 2D materials</i><br>
+                    <div class="box person">
+                        <div class="image">
+                            <img src="images/matteo.png" style='max-width: 200px; max-height:200px'/>
                         </div>
+                        <h3>Matteo D'Alessio</h3>
+                        <p>Master student in Physics<br> 
+                        University of Trieste<br>
+                        <i>First-principles modelling of novel 2D materials</i><br>
+                    </div>
 
-                        <!-- Bo Peng -->
+
                         <div class="box person">
                                 <div class="image">
                                         <img src="images/mug.png" style='max-width: 300px; max-height:200px'/>
@@ -96,6 +105,16 @@
                             <p>Bachelor student in Physics<br> 
                                 University of Trieste<br>
                             <i>Deep-learning interatomic potentials</i><br>
+                        </div>
+
+                        <div class="box person">
+                            <div class="image">
+                                <img src="images/francesca.jpg" style='max-width: 200px; max-height:200px'/>
+                            </div>
+                            <h3>Francesca Cucchiaro</h3>
+                            <p>Bachelor student in Physics<br> 
+                                University of Trieste<br>
+                            <i>Quasi-harmonic approximation in 2D materials</i><br>
                         </div>
 
                     </div>
