Added arxiv Grassano et al.

--- a/publications.html
+++ b/publications.html
@@ -49,10 +49,20 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 16. </td>
+                                    <td>D. Grassano, D. Campi, <b>A. Marrazzo</b> and N. Marzari<br>
+                                     <i>A complementary screening for quantum spin Hall insulators in 2D exfoliable materials</i><br>
+                                     <a href=https://doi.org/10.48550/arXiv.2205.02583> arXiv:2205.02583 (2022)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 15. </td>
                                     <td>I. Gilardoni, F. Becca, <b>A. Marrazzo</b> and A. Parola<br>
                                      <i>A real-space many-body marker for correlated Z2 topological insulators</i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2202.12207> arXiv (2022)</a>
+                                     <a href=https://doi.org/10.48550/arXiv.2202.12207> arXiv:2202.12207 (2022)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
