--- a/news.html
+++ b/news.html
@@ -38,6 +38,20 @@
 					</header>
 
 					<article>
+						<p>February 2022</p>
+
+						<div class="image cover">
+						<!--<div class="image cover">-->
+							<img src="images/w2022.jpg" width="420" alt="wannier 2022 logo"/>
+						</div>
+						<header>
+							<h3>Applications open for the <br> Wannier 2022 Summer School!</h3>
+						</header>
+						<footer>
+							<a href="http://indico.ictp.it/event/9789/" class="button special">Apply here</a>
+						</footer>
+					</article>
+					<article>
 						<p>November 2021</p>
 
 						<header>
