--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
                         </div>
                     <h3>Valerio Vitale</h3>
                     <p>Marie Sklodowska-Curie Postdoctoral Fellow<br>
-                        (starting September 2022) Physics Department, University of Trieste <br>
+                        Physics Department, University of Trieste <br>
                         </div>
                     </div>
                     
@@ -75,23 +75,13 @@
                         </div>
                 <!-- </div> -->
 
-                    <div class="box person">
-                        <div class="image">
-                            <img src="images/matteo.png" style='max-width: 200px; max-height:200px'/>
-                        </div>
-                        <h3>Matteo D'Alessio</h3>
-                        <p>Master student in Physics<br> 
-                        University of Trieste<br>
-                        <i>First-principles modelling of novel 2D materials</i><br>
-                    </div>
-
 
                         <div class="box person">
                                 <div class="image">
                                         <img src="images/mug.png" style='max-width: 300px; max-height:200px'/>
                                     </div>
                             <h3>Roberta Favata</h3>
-                            <p>Master student in Physics<br> 
+                            <p>PhD student in Physics<br> 
                                 University of Trieste<br>
                             <i>Topological invariants</i><br>
                         </div>
@@ -102,7 +92,7 @@
                                 <img src="images/riccardo.jpeg" style='max-width: 200px; max-height:200px'/>
                             </div>
                             <h3>Riccardo Dal Molin</h3>
-                            <p>Bachelor student in Physics<br> 
+                            <p>Master student in Physics<br> 
                                 University of Trieste<br>
                             <i>Deep-learning interatomic potentials</i><br>
                         </div>
@@ -121,8 +111,12 @@
 
             	</div>
             </section>
+<h3>&ensp;Alumni</h3>
+<div>&emsp; - Roberta Favata (MSc thesis, Nov 2021 - Oct 2022), now Physics PhD student at University of Trieste</div>
+<div>&emsp; - Matteo D'Alessio (MSc thesis, Oct 2021 - Sep 2022), now PhD student at University of Modena and Reggio Emilia </div>
+<div>&emsp; - Riccardo Dal Molin (BSc thesis, Nov 2021 - May 2022), now Physics MSc student at University of Trieste </div>
 
-                <!-- Footer -->
+<!-- Footer -->
                 <footer id="footer">
                         <div class="inner">
                                 <div class="flex">
