--- a/team.html
+++ b/team.html
@@ -86,6 +86,16 @@
                             <i>Topological invariants</i><br>
                         </div>
 
+                        <div class="box person">
+                            <div class="image">
+                                    <img src="images/nicolas.jpg" style='max-width: 300px; max-height:200px'/>
+                                </div>
+                        <h3>Nicolas Ba&ugrave</h3>
+                        <p>Master student in Physics<br> 
+                            University of Trieste<br>
+                        <i>Topological invariants</i><br>
+                        </div>
+
 
                         <div class="box person">
                             <div class="image">
@@ -104,7 +114,7 @@
                             <h3>Francesca Cucchiaro</h3>
                             <p>Bachelor student in Physics<br> 
                                 University of Trieste<br>
-                            <i>Quasi-harmonic approximation in 2D materials</i><br>
+                            <i>Phonons in 2D materials</i><br>
                         </div>
 
                     </div>
