added job listing

--- a/news.html
+++ b/news.html
@@ -36,7 +36,20 @@
 						<h2>News archive</h2>
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
+					<article>
+						<p>May 2022</p>
 
+						<div class="image cover">
+						<!--<div class="image cover">-->
+							<img src="images/ferroz2_news.png" width="420" alt="Ferroeletric QSHI cartoon"/>
+						</div>
+						<header>
+							<h3>New article about 2D ferroelectric topological insulators <br> published on npj 2D materials and applications!</h3>
+						</header>
+						<footer>
+							<a href="https://doi.org/10.1038/s41699-022-00305-9" class="button special">Read here open-access</a>
+						</footer>
+					</article>
 					<article>
 						<p>February 2022</p>
 
