--- a/team.html
+++ b/team.html
@@ -107,21 +107,12 @@
                             <i>Deep-learning interatomic potentials</i><br>
                         </div>
 
-                        <div class="box person">
-                            <div class="image">
-                                <img src="images/francesca.jpg" style='max-width: 200px; max-height:200px'/>
-                            </div>
-                            <h3>Francesca Cucchiaro</h3>
-                            <p>Bachelor student in Physics<br> 
-                                University of Trieste<br>
-                            <i>Phonons in 2D materials</i><br>
-                        </div>
-
                     </div>
 
             	</div>
             </section>
 <h3>&ensp;Alumni</h3>
+<div>&emsp; - Francesca Cucchiaro (BSc thesis, May 2022 - Dec 2022), now Physics MSc student at University of Trieste</div>
 <div>&emsp; - Roberta Favata (MSc thesis, Nov 2021 - Oct 2022), now Physics PhD student at University of Trieste</div>
 <div>&emsp; - Matteo D'Alessio (MSc thesis, Oct 2021 - Sep 2022), now PhD student at University of Modena and Reggio Emilia </div>
 <div>&emsp; - Riccardo Dal Molin (BSc thesis, Nov 2021 - May 2022), now Physics MSc student at University of Trieste </div>
