--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 								<img src="images/scdm2.png" width="180" alt="Pic 01">
 							</div>
 							<header>
-								<h3>Electronic-Structure Theory & Algorithms</h3>
+								<h3>Electronic-Structure Theory & Methods</h3>
 							</header>
-							<p>Advances in electronic-structure theory and development of innovative algorithms</p>
+							<p>Advances in electronic-structure theory and development of novel methods</p>
 							<footer>
 								<a href="es.html" class="button special">Read More</a>
 							</footer>
