--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,26 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 19. </td>
+                                    <td> R. Favata and <b>A. Marrazzo</b> <br>
+                                     <i>Single-point spin Chern number in a supercell framework</i><br>
+                                     <a href=''> arXiv (2023)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
+                                    <td> 18. </td>
+                                    <td> M. Bonacci, J. Qiao, N. Spallanzani, <b>A. Marrazzo</b>, G. Pizzi, E. Molinari, D. Varsano, A. Ferretti, D. Prezzi<br>
+                                     <i>Towards high-throughput many-body perturbation theory: efficient algorithms and automated workflows</i><br>
+                                     <a href=https://assets.researchsquare.com/files/rs-2353624/v1/69077ca04129c3538617dc18.pdf?c=1672186927> preprint (2022)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 17. </td>
                                     <td> <b>A. Marrazzo</b> <br>
                                      <i>Thermal robustness of the quantum spin Hall phase in monolayer WTe<sub>2</sub></i><br>
