--- a/topology.html
+++ b/topology.html
@@ -36,8 +36,40 @@
 						<h2>Topological & Quantum Materials</h2>
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
+								
 								<!-- Intro -->
-								<h2 id="content">Spintronics materials</h2>
+								<h2 id="content">Topological insulators</h2>
+								<div class="flex flex-2">
+
+							   <article><img src="images/3d_jacu.png" width="100%" alt="Jacutingaite"></article>
+
+							   <article>
+								<p>
+								I have been using first-principles atomistic simulations to discover and study novel 2D materials with topological order. Leveraging materials informatics, I completed a computational screening for novel quantum spin Hall insulators (QSHI) [<a href=https://doi.org/10.1021/acs.nanolett.9b02689>Nano Letters 19, 12 (2019)</a>]. <a href="http://materialscloud.org/discover/2dtopo/">Here</a> you can interactively explore the QSHI candidates. In the process, I discovered that the naturally-occuring mineral <i>jacutingaite</i> can potentially be exfoliated into monolayers that are Kane-Mele (graphene-like) 2D topological insulators [<a href=https://doi.org/10.1103/PhysRevLett.120.117701>Phys. Rev. Lett. 120, 117701 (2018)</a>]. Monolayer jacutingaite is a novel QSHI with a large band gap and posses a unique mechanism for electrical switching, thanks to a strong interplay between spin-orbit coupling, inversion crystal-symmetry breaking and dielectric response. See also the news story <a href="http://theossrv1.epfl.ch/Main/2D?action=download&upname=jacu_article.pdf">here</a>.
+								In collaboration with experimental groups, we have have been studying also 3D jacutingaite that we discovered to be a dual topological insulator, where a weak Z2 topological order coexist with a non-trivial crystalline topology described by a mirror Chern number. ARPES experiments and DFT simulations reported the presence of 001-surface states [<a href=https://doi.org/10.1103/PhysRevLett.124.106402>Phys. Rev. Lett. 124, 106402 (2020)</a>] protected by a mirror Chern number of 2. We unraveled the emergent topology of 3D jacutingaite by extending the 2D Kane-Mele model with an peculiar second nearest-layer hopping term derived from maximally-localised Wannier functions [<a href=https://doi.org/10.1103/PhysRevResearch.2.012063>Phys. Rev. Research 2, 012063(R) Editors’ Suggestion (2020)</a>].
+								</p></article>
+								<br>
+						        <!--<article>
+								<a href="http://materialscloud.org/discover/2dtopo/"><img src="images/2dtopo_webpage.png" width="100%" alt="2D topological insulators webpage screenshot"></a>
+							    </article>
+								<br><br><br><br>
+
+								-->
+								<!--<div> 
+									<object type="text/html" data="https://www.materialscloud.org/discover/2dtopo/" width="100%" height="600px" style="overflow:auto;border:5px ridge white">
+									</object>
+								 </div>
+								-->
+								<article>For many technological applications, it would be important to be able to switch on and off the topological properties, and correspondingly the metallic boundary states. Up to now, most approaches have relied on volatile effects, where the transformation from a topological to a so-called “trivial” state requires energy to be maintained. Recently [<a href=https://doi.org/10.1038/s41699-022-00305-9> npj 2D Materials and Applications 6, 30 (2022)</a>], we have used a combination of models and first-principles simulations, to demonstrate that it is possible to exploit ferroelectricity to control topology in a non-volatile way. By combining two “trivial” two-dimensional materials, one being ferroelectric, it is possible to create a heterostructure where in one ferroelectric polarization state the system is topological (already intriguing given the non topological nature of the parent materials), while in the opposite polarization state it is trivial, so that an external electric field not only controls the polarization direction but also the topological state. The proposed mechanism is thus very general and requires only a proper band alignment between the conduction and valences states of two monolayers, a ferroelectric and a semiconductor. 
+								</article>	
+								<article>	
+									<img src="images/ferro_qshi.pdf" width="100%" alt="ferroelectric topological heterostructure">
+							    </article>	
+							</div>
+							<br><br>
+							<br><br>
+								<!-- Intro -->
+								<h2 id="content">Spintronics and 2D materials</h2>
 								<div class="flex flex-2">
 									<article>
 								<p>
@@ -50,32 +82,10 @@
 									between electric gates to control the spin population of each sublayer, and thus the rotation of the spins travelling through the material. Recently [<a href=https://doi.org/10.1021/acs.nanolett.1c02322>Nano Letters (2021)</a>], we identified [<a href=https://www.materialscloud.org/discover/2dstructures/details/OLuI>LuIO</a>] as the best R2 2D material by screening hundreds of materials with high-throughput materials simulations powered by supercomputers. In addition, we studied in full detail how to control its properties with electric gates within the density-functional theory framework, simulating for the first time ever the effect of electronic doping and providing practical guidelines to build and operate 2D spinFET devices.
 									</p>
 								</div>
-								<!-- Intro -->
-								<h2 id="content">Topological insulators</h2>
-								<div class="flex flex-2">
-
-							   <article><img src="images/3d_jacu.png" width="100%" alt="Jacutingaite"></article>
-
-							   <article>
-								<p>
-								I have been using first-principles atomistic simulations to discover and study novel 2D materials with topological order. Leveraging materials informatics, I completed a computational screening for novel quantum spin Hall insulators (QSHI) [<a href=https://doi.org/10.1021/acs.nanolett.9b02689>Nano Letters 19, 12 (2019)</a>]. In the process, I discovered that the naturally-occuring mineral <i>jacutingaite</i> can potentially be exfoliated into monolayers that are Kane-Mele (graphene-like) 2D topological insulators [<a href=https://doi.org/10.1103/PhysRevLett.120.117701>Phys. Rev. Lett. 120, 117701 (2018)</a>]. Monolayer jacutingaite is a novel QSHI with a large band gap and posses a unique mechanism for electrical switching, thanks to a strong interplay between spin-orbit coupling, inversion crystal-symmetry breaking and dielectric response. See also the news story <a href="http://theossrv1.epfl.ch/Main/2D?action=download&upname=jacu_article.pdf">here</a>.
-								In collaboration with experimental groups, we have have been studying also 3D jacutingaite that we discovered to be a dual topological insulator, where a weak Z2 topological order coexist with a non-trivial crystalline topology described by a mirror Chern number. ARPES experiments and DFT simulations reported the presence of 001-surface states [<a href=https://doi.org/10.1103/PhysRevLett.124.106402>Phys. Rev. Lett. 124, 106402 (2020)</a>] protected by a mirror Chern number of 2. We unraveled the emergent topology of 3D jacutingaite by extending the 2D Kane-Mele model with an peculiar second nearest-layer hopping term derived from maximally-localised Wannier functions [<a href=https://doi.org/10.1103/PhysRevResearch.2.012063>Phys. Rev. Research 2, 012063(R) Editors’ Suggestion (2020)</a>].
-								</p></article>
-
-
-								<br>
-								<p> <a href="http://materialscloud.org/discover/2dtopo/">Here</a> you can interactively access some of the results of the computational screening for novel QSHIs.</p>
-								<a href="http://materialscloud.org/discover/2dtopo/"><img src="images/2dtopo_webpage.png" width="100%" alt="2D topological insulators webpage screenshot"></a>
-								<!--<div> 
-									<object type="text/html" data="https://www.materialscloud.org/discover/2dtopo/" width="100%" height="600px" style="overflow:auto;border:5px ridge white">
-									</object>
-								 </div>
-								-->
-								<br><br>
 
 
 
-</div>
+
 						</section>
 			
 						
