--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
                                     <td> 19. </td>
                                     <td> R. Favata and <b>A. Marrazzo</b> <br>
                                      <i>Single-point spin Chern number in a supercell framework</i><br>
-                                     <a href=''> arXiv (2023)</a>
+                                     <a href=https://doi.org/10.1088/2516-1075/acba6f> Electronic Structure (2023)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -72,7 +72,7 @@
                                     <td> 17. </td>
                                     <td> <b>A. Marrazzo</b> <br>
                                      <i>Thermal robustness of the quantum spin Hall phase in monolayer WTe<sub>2</sub></i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2210.11258> arXiv:2210.11258 (2022)</a>
+                                     <a href=https://doi.org/10.1103/PhysRevMaterials.7.L021201> Phys. Rev. Materials 7, L021201 (2023)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
