--- a/publications.html
+++ b/publications.html
@@ -50,9 +50,9 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 19. </td>
-                                    <td> R. Favata and <b>A. Marrazzo</b> <br>
-                                     <i>Single-point spin Chern number in a supercell framework</i><br>
-                                     <a href=https://doi.org/10.1088/2516-1075/acba6f> Electronic Structure (2023)</a>
+                                    <td> M. Bonacci, J. Qiao, N. Spallanzani, <b>A. Marrazzo</b>, G. Pizzi, E. Molinari, D. Varsano, A. Ferretti, D. Prezzi<br>
+                                     <i>Towards high-throughput many-body perturbation theory: efficient algorithms and automated workflows</i><br>
+                                     <a href=https://doi.org/10.1038/s41524-023-01027-2> npj Computational Materials 9, 74 (2023)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
@@ -60,9 +60,9 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 18. </td>
-                                    <td> M. Bonacci, J. Qiao, N. Spallanzani, <b>A. Marrazzo</b>, G. Pizzi, E. Molinari, D. Varsano, A. Ferretti, D. Prezzi<br>
-                                     <i>Towards high-throughput many-body perturbation theory: efficient algorithms and automated workflows</i><br>
-                                     <a href=https://assets.researchsquare.com/files/rs-2353624/v1/69077ca04129c3538617dc18.pdf?c=1672186927> preprint (2022)</a>
+                                    <td> R. Favata and <b>A. Marrazzo</b> <br>
+                                     <i>Single-point spin Chern number in a supercell framework</i><br>
+                                     <a href=https://doi.org/10.1088/2516-1075/acba6f> Electronic Structure 5, 014005 (2023)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
