--- a/news.html
+++ b/news.html
@@ -37,6 +37,32 @@
 						<!--<p>Aliquam erat volutpat nam dui </p>-->
 					</header>
 					<article>
+						<p>December 2022</p>
+						<header>
+							<h3>*Job announcement* Two-year postdoc position on machine-learned interatomic potentials for 2D materials</h3>
+							We have a two-year postdoc position on the development and application of interatomic potentials based on deep neural networks to study complex phenomena in 2D and van der Waals materials at finite temperature. <br><br>
+
+							More information about the position is available at the <a href="https://psi-k.net/jobs/two-year-post-doc-position-on-machine-learned-inte/" class="button special">Psi-k job listing</a>  <br><br>
+							
+							We strongly encourage interested candidates to send an expression of interest to positions.cmts.df.units (AT) gmail _DOT_ com by *21 December 2022*.
+						</header>
+						<footer>
+						</footer>
+					</article>
+
+					<article>
+						<p>June 2022</p>
+						<header>
+							<h3>The first ever PRACE HPC Excellence Award</h3>
+							This newly created award recognises an outstanding individual or team for ground-breaking research that leads to significant scientific advances through the usage of HPC. Together with N. Mounet, M. Gibertini, P. Schwaller, D. Campi, A. Merkys, A. Marrazzo, T. Sohier, I. E. Castelli, A. Cepellotti, G. Pizzi, and N. Marzari, we won the prize for our work on <em>Two-dimensional materials from high-throughput computational exfoliation of experimentally known compounds, Nature Nanotechnology 13, 246-252 (2018)</em>. In the words of the Prize Comittee, "This cornerstone work outlines the role of accurate first-principle simulations as an effective tool for materials discovery through the usage of high-performance computing. The developed digital twin of an exfoliation experiment has already had an exceptional impact in the field, leading to the discovery of new materials, in particular quantum materials."
+						</header>
+						<footer>
+							<a href="https://prace-ri.eu/winner-inaugural-prace-hpc-excellence-award/" class="button special">Press release</a>
+						</footer>
+					</article>
+
+
+					<article>
 						<p>May 2022</p>
 
 						<div class="image cover">
