added prm screening 2023

--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,16 @@
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
                                     <td> 19. </td>
+                                    <td>D. Grassano, D. Campi, <b>A. Marrazzo</b> and N. Marzari<br>
+                                     <i>A complementary screening for quantum spin Hall insulators in 2D exfoliable materials</i><br>
+                                     <a href=https://doi.org/10.1103/PhysRevMaterials.7.094202> Phys. Rev. Materials 7, 094202 (2023)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
+                                    <td> 18. </td>
                                     <td> M. Bonacci, J. Qiao, N. Spallanzani, <b>A. Marrazzo</b>, G. Pizzi, E. Molinari, D. Varsano, A. Ferretti, D. Prezzi<br>
                                      <i>Towards high-throughput many-body perturbation theory: efficient algorithms and automated workflows</i><br>
                                      <a href=https://doi.org/10.1038/s41524-023-01027-2> npj Computational Materials 9, 74 (2023)</a>
@@ -59,7 +69,7 @@
                                 </tr>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
-                                    <td> 18. </td>
+                                    <td> 17. </td>
                                     <td> R. Favata and <b>A. Marrazzo</b> <br>
                                      <i>Single-point spin Chern number in a supercell framework</i><br>
                                      <a href=https://doi.org/10.1088/2516-1075/acba6f> Electronic Structure 5, 014005 (2023)</a>
@@ -69,20 +79,10 @@
                                 </tr>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
-                                    <td> 17. </td>
+                                    <td> 16. </td>
                                     <td> <b>A. Marrazzo</b> <br>
                                      <i>Thermal robustness of the quantum spin Hall phase in monolayer WTe<sub>2</sub></i><br>
                                      <a href=https://doi.org/10.1103/PhysRevMaterials.7.L021201> Phys. Rev. Materials 7, L021201 (2023)</a>
-                                    </td>
-                                    <td style="font-size:12px">
-                                    </td>
-                                </tr>
-                                <tr> <!-- new paper -->
-                                    <td style="vertical-align:middle"> </td>
-                                    <td> 16. </td>
-                                    <td>D. Grassano, D. Campi, <b>A. Marrazzo</b> and N. Marzari<br>
-                                     <i>A complementary screening for quantum spin Hall insulators in 2D exfoliable materials</i><br>
-                                     <a href=https://doi.org/10.48550/arXiv.2205.02583> arXiv:2205.02583 (2022)</a>
                                     </td>
                                     <td style="font-size:12px">
                                     </td>
