--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,16 @@
 							<tbody>
                                 <tr> <!-- new paper -->
                                     <td style="vertical-align:middle"> </td>
+                                    <td> 20. </td>
+                                    <td> N. Baù and <b>A. Marrazzo</b><br>
+                                     <i>Local Chern marker for periodic systems</i><br>
+                                     <a href=https://doi.org/10.48550/arXiv.2310.15783> arXiv:2310.15783 (2023)</a>
+                                    </td>
+                                    <td style="font-size:12px">
+                                    </td>
+                                </tr>
+                                <tr> <!-- new paper -->
+                                    <td style="vertical-align:middle"> </td>
                                     <td> 19. </td>
                                     <td>D. Grassano, D. Campi, <b>A. Marrazzo</b> and N. Marzari<br>
                                      <i>A complementary screening for quantum spin Hall insulators in 2D exfoliable materials</i><br>
