--- a/team.html
+++ b/team.html
@@ -73,34 +73,57 @@
                             (cosupervised with Nicola Marzari)<br>
                             <i>Machine learning of electronic structure properties</i><br>
                         </div>
-                <!-- </div> -->
-
 
                         <div class="box person">
                                 <div class="image">
-                                        <img src="images/mug.png" style='max-width: 300px; max-height:200px'/>
+                                        <img src="images/rob.png" style='max-width: 200px; max-height:200px'/>
                                     </div>
                             <h3>Roberta Favata</h3>
                             <p>PhD student in Physics<br> 
                                 University of Trieste<br>
-                            <i>Topological invariants</i><br>
+                            <i>Disordered & strongly-correlated <br> topological insulators</i><br>
                         </div>
 
                         <div class="box person">
                             <div class="image">
-                                    <img src="images/nicolas.jpg" style='max-width: 300px; max-height:200px'/>
-                                </div>
+                                    <img src="images/nicolas.jpg" style='max-width: 200px; max-height:200px'/>
+                            </div>
                         <h3>Nicolas Ba&ugrave</h3>
-                        <p>Master student in Physics<br> 
+                        <p>PhD student in Physics<br> 
+                            University of Trieste<br>
+                        <i>Local topological invariants, <br>  topological superconductors </i><br>
+                        </div>
+
+                    </div>
+                    <div class="flex flex-3">
+
+                        <div class="box person">
+                            <div class="image">
+                                    <img src="images/mug.png" style='max-width: 300px; max-height:200px'/>
+                                </div>
+                        <h3>Mitra Dowlatabadi</h3>
+                        <p>PhD student in Physics (starting in January 2024)<br> 
+                            University of Trieste<br>
+                        <i>Topological superconductors</i><br>
+                        </div>
+
+                        <div class="box person">
+                            <div class="image">
+                                    <img src="images/mug.png" style='max-width: 300px; max-height:200px'/>
+                                </div>
+                        <h3>Eleonora Lamma</h3>
+                        <p>MSc student in Physics<br> 
                             University of Trieste<br>
                         <i>Topological invariants</i><br>
                         </div>
-
+                    </div>
+                    
                     </div>
 
             	</div>
             </section>
 <h3>&ensp;Alumni</h3>
+<div>&emsp; - Nicolas Ba&ugrave (MSc thesis, Nov 2022 - Sep 202e), now Physics PhD student at University of Trieste</div>
 <div>&emsp; - Francesca Cucchiaro (BSc thesis, May 2022 - Dec 2022), now Physics MSc student at University of Trieste</div>
 <div>&emsp; - Roberta Favata (MSc thesis, Nov 2021 - Oct 2022), now Physics PhD student at University of Trieste</div>
 <div>&emsp; - Matteo D'Alessio (MSc thesis, Oct 2021 - Sep 2022), now PhD student at University of Modena and Reggio Emilia </div>
